updated to enable building the add-on jar from maven