@@ -3,6 +3,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <!-- for more info on creating addon with Maven see:
+        https://vaadin.com/forum#!/thread/5166129
+        and
+        https://github.com/mstahv/vodatime/tree/vaadin7
+    -->
 
     <groupId>groupId</groupId>
     <artifactId>tableexport-for-vaadin</artifactId>
@@ -12,19 +17,48 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <vaadin.version>7.1.11</vaadin.version>
-        <vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
+        <skipTests>true</skipTests>
     </properties>
+
+    <!-- google only supports https:, not git: or ssh: -->
+    <scm>
+        <url>https://code.google.com/p/tableexport-for-vaadin/</url>
+        <connection>scm:git:https://code.google.com/p/tableexport-for-vaadin/</connection>
+        <developerConnection>scm:git:https://code.google.com/p/tableexport-for-vaadin/</developerConnection>
+        <tag>tableexport-for-vaadin add-on</tag>
+    </scm>
+
+    <issueManagement>
+        <system>code.google.com</system>
+        <url>https://code.google.com/p/tableexport-for-vaadin/issues</url>
+    </issueManagement>
+
+    <licenses>
+        <license>
+            <name>Apache 2</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+            <comments>A business-friendly OSS license</comments>
+        </license>
+    </licenses>
+
     <repositories>
         <repository>
             <id>vaadin-addons</id>
             <url>http://maven.vaadin.com/vaadin-addons</url>
         </repository>
         <repository>
+            <id>maven2-repository.dev.java.net</id>
+            <name>Java.net Maven 2 Repository</name>
+            <url>http://download.java.net/maven/2</url>
+            <layout>default</layout>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+        <repository>
             <id>vaadin-snapshots</id>
             <url>http://oss.sonatype.org/content/repositories/vaadin-snapshots/</url>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
@@ -42,24 +76,27 @@
             </snapshots>
         </pluginRepository>
     </pluginRepositories>
+
     <dependencies>
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-server</artifactId>
             <version>${vaadin.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.vaadin</groupId>
-            <artifactId>vaadin-client-compiled</artifactId>
+            <artifactId>vaadin-client</artifactId>
             <version>${vaadin.version}</version>
+            <scope>provided</scope>
         </dependency>
         <!--
-          Needed when using the widgetset optimizer (custom ConnectorBundleLoaderFactory).
+  Needed when using the widgetset optimizer (custom ConnectorBundleLoaderFactory).
 
-          For widgetset compilation, vaadin-client-compiler is automatically added on the
-          compilation classpath by vaadin-maven-plugin so normally there is no need for an
-          explicit dependency.
-        -->
+  For widgetset compilation, vaadin-client-compiler is automatically added on the
+  compilation classpath by vaadin-maven-plugin so normally there is no need for an
+  explicit dependency.
+-->
         <!--
         <dependency>
             <groupId>com.vaadin</groupId>
@@ -68,12 +105,6 @@
             <scope>provided</scope>
         </dependency>
         -->
-        <dependency>
-            <groupId>com.vaadin</groupId>
-            <artifactId>vaadin-client</artifactId>
-            <version>${vaadin.version}</version>
-            <scope>provided</scope>
-        </dependency>
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-push</artifactId>
@@ -102,7 +133,6 @@
             <version>3.9</version>
         </dependency>
     </dependencies>
-
     <build>
         <plugins>
             <plugin>
@@ -113,74 +143,156 @@
                     <target>1.6</target>
                 </configuration>
             </plugin>
-            <!-- As we are doing "inplace" GWT compilation, ensure the widgetset -->
-            <!-- directory is cleaned properly -->
-            <plugin>
-                <artifactId>maven-clean-plugin</artifactId>
-                <version>2.4.1</version>
-                <configuration>
-                    <filesets>
-                        <fileset>
-                            <directory>src/main/webapp/VAADIN/widgetsets</directory>
-                        </fileset>
-                    </filesets>
-                </configuration>
-            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-war-plugin</artifactId>
-                <version>2.2</version>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.3.1</version>
                 <configuration>
-                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                    <archive>
+                        <index>true</index>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <!-- Implementation-Title and Implementation-Version come from the
+                            POM by default -->
+                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+                        </manifest>
+                        <manifestEntries>
+                            <!-- Package format version - do not change -->
+                            <Vaadin-Package-Version>1</Vaadin-Package-Version>
+
+                            <!-- Comma-separated list of widgetsets in the package -->
+                            <!-- TODO figure out a way make this automatically configured -->
+                            <Vaadin-Widgetsets>org.vaadin.addon.vodatime.Widgetset</Vaadin-Widgetsets>
+                        </manifestEntries>
+                    </archive>
+                    <excludes>
+                        <!-- Remove resources included due to gwt compilation -->
+                        <exclude>**/demoandtestapp/*</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>2.1.2</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <includeScope>runtime</includeScope>
+                            <outputDirectory>target/libs</outputDirectory>
+                            <!-- configure the plugin here -->
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+
+            <!-- This creates a zip file of jar and sources jar. When publishing in
+            the Directory this makes sources available to maven users automatically.
+            We could also use this to package required dependecies for those poor developer
+            souls that still dont know how to use a build system that supports transient
+            dependencies... -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <finalName>${project.artifactId}-${project.version}</finalName>
+                    <appendAssemblyId>false</appendAssemblyId>
+                    <descriptors>
+                        <descriptor>assembly.xml</descriptor>
+                    </descriptors>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>com.vaadin</groupId>
                 <artifactId>vaadin-maven-plugin</artifactId>
-                <version>${vaadin.plugin.version}</version>
-                <configuration>
-                    <extraJvmArgs>-Xmx512M -Xss1024k</extraJvmArgs>
-                    <!-- <runTarget>mobilemail</runTarget> -->
-                    <!-- We are doing "inplace" but into subdir VAADIN/widgetsets. This
-                        way compatible with Vaadin eclipse plugin. -->
-                    <webappDirectory>${basedir}/src/main/webapp/VAADIN/widgetsets
-                    </webappDirectory>
-                    <hostedWebapp>${basedir}/src/main/webapp/VAADIN/widgetsets
-                    </hostedWebapp>
-                    <noServer>true</noServer>
-                    <!-- Remove draftCompile when project is ready -->
-                    <draftCompile>false</draftCompile>
-                    <compileReport>true</compileReport>
-                    <style>OBF</style>
-                    <strict>true</strict>
-                    <runTarget>http://localhost:8080/</runTarget>
-                </configuration>
                 <executions>
                     <execution>
-                        <configuration>
-                            <!-- if you don't specify any modules, the plugin will find them -->
-                            <!-- <modules> <module>com.vaadin.demo.mobilemail.gwt.ColorPickerWidgetSet</module>
-                                </modules> -->
-                        </configuration>
+                        <id>testwidgetset</id>
+                        <phase>test-compile</phase>
                         <goals>
-                            <goal>clean</goal>
-                            <goal>resources</goal>
-                            <goal>update-theme</goal>
-                            <goal>update-widgetset</goal>
-                            <goal>compile-theme</goal>
                             <goal>compile</goal>
                         </goals>
+                        <configuration>
+                            <skip>${skipTests}</skip>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>org.mortbay.jetty</groupId>
-                <artifactId>jetty-maven-plugin</artifactId>
-            </plugin>
         </plugins>
+
+        <resources>
+            <resource>
+                <!-- This add sources, .gwt.xml files etc to jar from source directory.
+                Not quite maven convention byt easieast to setup this way. -->
+                <directory>src/main/java</directory>
+            </resource>
+            <!-- This is here to simplify working with GWT plugin during test widgetset
+            compilation. Test widgetset is this way more like a real world usage and
+            also lets your test up to e.g. use other add-ons. Ensure these are excluded
+            from the artifact ( jar file ). -->
+            <resource>
+                <directory>src/test/resources</directory>
+            </resource>
+        </resources>
+
         <pluginManagement>
             <plugins>
-                <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+                <!-- Compile widget set for integration testing -->
+                <plugin>
+                    <groupId>com.vaadin</groupId>
+                    <artifactId>vaadin-maven-plugin</artifactId>
+                    <version>${vaadin.version}</version>
+                    <configuration>
+                        <webappDirectory>${project.build.directory}/testwebapp/VAADIN/widgetsets</webappDirectory>
+                        <extraJvmArgs>-Xmx1024M -Xss512m -XX:MaxPermSize=1024m</extraJvmArgs>
+                        <hostedWebapp>${project.build.directory}/testwebapp</hostedWebapp>
+                        <noServer>true</noServer>
+                        <runTarget>http://localhost:9998/</runTarget>
+                        <draftCompile>true</draftCompile>
+                        <style>PRETTY</style>
+                        <!-- We only need to compile the test widgetset, if not defined gwt
+                        module will also compile the add-on widgetset as well -->
+                        <module>org.vaadin.addon.vodatime.demoandtestapp.TestWidgetset</module>
+                        <!-- If you do lots of e.g. plain css changes and don't wish to use
+                        hosted mode, you can force compile easily with uncommenting following rule -->
+                        <force>true</force>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <configuration>
+                        <excludes>
+                            <!-- Files here might match to naming convetions, but the are just
+                            vaadin apps containing you add-on components in varios setups. We can ignore
+                            them from test. -->
+                            <exclude>**/demoandtestapp/*</exclude>
+                        </excludes>
+                    </configuration>
+                </plugin>
+                <!--This plugin's configuration is used to store Eclipse m2e settings
+                only. It has no influence on the Maven build itself. -->
                 <plugin>
                     <groupId>org.eclipse.m2e</groupId>
                     <artifactId>lifecycle-mapping</artifactId>
@@ -190,19 +302,40 @@
                             <pluginExecutions>
                                 <pluginExecution>
                                     <pluginExecutionFilter>
-                                        <groupId>com.vaadin</groupId>
+                                        <groupId>
+                                            com.vaadin
+                                        </groupId>
                                         <artifactId>
                                             vaadin-maven-plugin
                                         </artifactId>
                                         <versionRange>
-                                            [7.1.11,)
+                                            [2.3.0-1,)
                                         </versionRange>
                                         <goals>
-                                            <goal>resources</goal>
-                                            <goal>update-widgetset</goal>
-                                            <goal>compile</goal>
-                                            <goal>update-theme</goal>
-                                            <goal>compile-theme</goal>
+                                            <goal>
+                                                compile
+                                            </goal>
+                                        </goals>
+                                    </pluginExecutionFilter>
+                                    <action>
+                                        <ignore></ignore>
+                                    </action>
+                                </pluginExecution>
+                                <pluginExecution>
+                                    <pluginExecutionFilter>
+                                        <groupId>
+                                            org.apache.maven.plugins
+                                        </groupId>
+                                        <artifactId>
+                                            maven-dependency-plugin
+                                        </artifactId>
+                                        <versionRange>
+                                            [2.0.0,)
+                                        </versionRange>
+                                        <goals>
+                                            <goal>
+                                                copy-dependencies
+                                            </goal>
                                         </goals>
                                     </pluginExecutionFilter>
                                     <action>
